fix alignment

--- a/src/Home.css
+++ b/src/Home.css
@@ -199,7 +199,7 @@ body, html {
   /* Tablet Responsiveness */
   @media (max-width: 992px) {
     .services-grid-home {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: 1fr;
     }
   }
   
